Revision history for DBIx-TableLoader

{{$NEXT}}

  - Superficial dist/release changes

1.000     2011-02-28T04:13:37Z

  - Initial release